--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
       <header class="header1">
         <img src="/match.jpg" id="logo" alt="Leaf&latte-logo">
-        <h1>Leaf&Latte:)</h1>
+        <h1>Leaf&Latte</h1>
         <h2>&mdash; HOME &mdash;</h2>
         <nav>
           <ul id="nav1">
