--- a/menu.html
+++ b/menu.html
@@ -5,8 +5,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Menu-Leaf & Latte</title>
-    <link rel="stylesheet" type="text/css" href="../reset.css">
-    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="/reset.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
   </head>
 
   <body>
