--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta charset="UTF-8">
     <title>Leaf&Latte</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/reset.css">
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
       <header class="header1">
-        <img src="/match.jpg" id="logo" alt="Leaf&latte-logo">
+        <img src="match.jpg" id="logo" alt="Leaf&latte-logo">
         <h1>Leaf&Latte</h1>
         <h2>&mdash; HOME &mdash;</h2>
         <nav>
