--- a/menu.html
+++ b/menu.html
@@ -5,14 +5,14 @@
   <head>
     <meta charset="UTF-8">
     <title>Menu-Leaf & Latte</title>
-    <link rel="stylesheet" type="text/css" href="/reset.css">
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
 
       <header class="header2">
-        <img src="/match.jpg" id="logo" alt="Leaf&latte-logo">
+        <img src="match.jpg" id="logo" alt="Leaf&latte-logo">
         <h1>Leaf&Latte</h1>
         <h2>&mdash; MENU &mdash;</h2>
         <nav>
