--- a/index.html
+++ b/index.html
@@ -28,28 +28,28 @@
 
       <h3>If you love sweets, you've come to the right place!</h3>
       <figure>
-        <img src="../img/bageri.jpg" id="bageri" alt="baking-process">
+        <img src="img/bageri.jpg" id="bageri" alt="baking-process">
         <figcaption>
           Discover a warm and inviting atmosphere where the aroma of freshly brewed coffee and homemade treats fills the air. Whether you're looking for a quiet place to work, a pleasant time with friends, or just want to enjoy a cup of coffee in good company – with us, you'll always find something for every taste. Come in and let us spoil you with our handcrafted drinks and delicious pastries!
         </figcaption>
       </figure>
 
       <section class="section1">
-        <img src="../img/tusenbladsbakelse.jpg" alt="tusenbladsbakelse">
+        <img src="img/tusenbladsbakelse.jpg" alt="tusenbladsbakelse">
         <div class="txt">
           <h4>INFOO</h4>
           <p>Jobbfikan är nästintill helig och därför är det klokt att gå långsamt fram om du vill göra förändringar i fikat. Beroende på om dina anställda är ett gäng kakmonster, hurtbullar eller en salig blandning kan förändringarna möta hårt motstånd. Men måste nyttig fika automatiskt betyda att fikat blir mindre gott? Här nedan hittar du fem alternativ för att göra de anställdas fikastund lite nyttigare.Jobbfikan är nästintill helig och därför är det klokt att gå långsamt fram om du vill göra förändringar i fikat. Beroende på om dina anställda är ett gäng kakmonster, hurtbullar eller en salig blandning kan förändringarna möta hårt motstånd. Men måste nyttig fika automatiskt betyda att fikat blir mindre gott? Här nedan hittar du fem alternativ för att göra de anställdas fikastund lite nyttigare.</p>
         </div>
       </section>
       <section class="section2">
-        <img src="../img/tusenbladsbakelse.jpg" alt="tusenbladsbakelse">
+        <img src="img/tusenbladsbakelse.jpg" alt="tusenbladsbakelse">
         <div class="txt">
           <h4>INFOO</h4>
           <p>Jobbfikan är nästintill helig och därför är det klokt att gå långsamt fram om du vill göra förändringar i fikat. Beroende på om dina anställda är ett gäng kakmonster, hurtbullar eller en salig blandning kan förändringarna möta hårt motstånd. Men måste nyttig fika automatiskt betyda att fikat blir mindre gott? Här nedan hittar du fem alternativ för att göra de anställdas fikastund lite nyttigare.Jobbfikan är nästintill helig och därför är det klokt att gå långsamt fram om du vill göra förändringar i fikat. Beroende på om dina anställda är ett gäng kakmonster, hurtbullar eller en salig blandning kan förändringarna möta hårt motstånd. Men måste nyttig fika automatiskt betyda att fikat blir mindre gott? Här nedan hittar du fem alternativ för att göra de anställdas fikastund lite nyttigare.Jobbfikan är nästintill helig och därför är det klokt att gå långsamt fram om du vill göra förändringar i fikat. Beroende på om dina anställda är ett gäng kakmonster, hurtbullar eller en salig blandning kan förändringarna möta hårt motstånd. Men måste nyttig fika automatiskt betyda att fikat blir mindre gott? Här nedan hittar du fem alternativ för att göra de anställdas fikastund lite nyttigare.</p>
         </div>
       </section>
       <section class="section1">
-        <img src="../img/tusenbladsbakelse.jpg" alt="tusenbladsbakelse">
+        <img src="img/tusenbladsbakelse.jpg" alt="tusenbladsbakelse">
         <div class="txt">
           <h4>INFOO</h4>
           <p>Jobbfikan är nästintill helig och därför är det klokt att gå långsamt fram om du vill göra förändringar i fikat. Beroende på om dina anställda är ett gäng kakmonster, hurtbullar eller en salig blandning kan förändringarna möta hårt motstånd. Men måste nyttig fika automatiskt betyda att fikat blir mindre gott? Här nedan hittar du fem alternativ för att göra de anställdas fikastund lite nyttigare.Jobbfikan är nästintill helig och därför är det klokt att gå långsamt fram om du vill göra förändringar i fikat. Beroende på om dina anställda är ett gäng kakmonster, hurtbullar eller en salig blandning kan förändringarna möta hårt motstånd. Men måste nyttig fika automatiskt betyda att fikat blir mindre gott? Här nedan hittar du fem alternativ för att göra de anställdas fikastund lite nyttigare.Jobbfikan är nästintill helig och därför är det klokt att gå långsamt fram om du vill göra förändringar i fikat. Beroende på om dina anställda är ett gäng kakmonster, hurtbullar eller en salig blandning kan förändringarna möta hårt motstånd. Men måste nyttig fika automatiskt betyda att fikat blir mindre gott? Här nedan hittar du fem alternativ för att göra de anställdas fikastund lite nyttigare.Jobbfikan är nästintill helig och därför är det klokt att gå långsamt fram om du vill göra förändringar i fikat. Beroende på om dina anställda är ett gäng kakmonster, hurtbullar eller en salig blandning kan förändringarna möta hårt motstånd. Men måste nyttig fika automatiskt betyda att fikat blir mindre gott? Här nedan hittar du fem alternativ för att göra de anställdas fikastund lite nyttigare.</p>
